--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <nav class="navbar">
-        <div class="navbar-brand"><h2>Daeng one</h2></div>
+        <div class="navbar-brand"><a href="https://www.rpmsystem.me/" target="_self">Daeng one</a></div>
         <div class="navbar-menu">
           <!-- <span onclick="openNav()">&#9776;</span> -->
           <ul class="nav" id="myNavbar">
