add image gallery

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
             <div class="banner-right">
               <!-- <img src="assets/image/vector-creator4.png" alt="" id="vector" /> -->
-              <img src="assets/image/img4.png" class="me" alt="..." />
+              <img src="assets/image/IMG_6843.png" class="me" alt="..." />
             </div>
           </div>
         </section>
@@ -101,26 +101,35 @@
           <div class="body">
             <div class="column first">
               <div class="row">
-                <img src="assets/image/gallery/IMG_6814 - Copy.JPG" alt="" />
+                <img src="assets/image/gallery/IMG_6901.JPG" alt="" />
               </div>
               <div class="row">
+                <img src="assets/image/gallery/IMG20191226074825.JPG" alt="" />
+              </div>
+              <!-- <div class="row">
                 <img src="assets/image/gallery/IMG_6814.JPG" alt="" />
+              </div> -->
+              <div class="row">
+                <img src="assets/image/gallery/IMG20210514165559.JPG" alt="" />
               </div>
             </div>
             <div class="column second">
               <div class="row">
-                <img src="assets/image/gallery/IMG_6843.JPG" alt="" />
+                <img src="assets/image/gallery/One.JPG" alt="" />
               </div>
               <div class="row">
-                <img src="assets/image/gallery/IMG_6844.JPG" alt="" />
+                <img src="assets/image/gallery/IMG201912260817361.JPG" alt="" />
               </div>
             </div>
             <div class="column third">
               <div class="row">
-                <img src="assets/image/gallery/IMG_6830.JPG" alt="" />
+                <img src="assets/image/gallery/IMG_3444.jpg" alt="" />
               </div>
               <div class="row">
-                <img src="assets/image/gallery/IMG_6845.JPG" alt="" />
+                <img src="assets/image/gallery/IMG_6843.JPG" alt="" />
+              </div>
+              <div class="row">
+                <img src="assets/image/gallery/IMG_6814.JPG" alt="" />
               </div>
             </div>
           </div>
